knative/product-knative/product-service.yml
apiVersion: serving.knative.dev/v1alpha1
kind: Service
metadata:
  name: product
  namespace: default
spec:
  template:
    metadata:
      labels:
        app: product
        version: 'v1'
  runLatest:
    configuration:
      revisionTemplate:
        metadata:
          name: product-knative
          annotations:
            # this prevents from scale to zero
            autoscaling.knative.dev/minScale: '1'
          labels:
            app: product
            version: 'v1'
        spec:
          containers:
            - name: product-app
              image: testbasereponame/product
              env:
                - name: SPRING_PROFILES_ACTIVE
                  value: prod
                - name: JHIPSTER_SECURITY_AUTHENTICATION_JWT_BASE64_SECRET
                  valueFrom:
                    secretKeyRef:
                      name: jwt-secret
                      key: secret
                - name: SPRING_DATASOURCE_URL
                  value: jdbc:mysql://product-mysql.default.svc.cluster.local:3306/product?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true
                - name: JHIPSTER_METRICS_LOGS_ENABLED
                  value: 'true'
                - name: JHIPSTER_LOGGING_LOGSTASH_ENABLED
                  value: 'true'
                - name: JHIPSTER_LOGGING_LOGSTASH_HOST
                  value: jhipster-logstash
                - name: SPRING_ZIPKIN_ENABLED
                  value: 'true'
                - name: SPRING_ZIPKIN_BASE_URL
                  value: http://jhipster-zipkin
                - name: SPRING_SLEUTH_PROPAGATION_KEYS
                  value: 'x-request-id,x-ot-span-context'
                - name: JAVA_OPTS
                  value: ' -Xmx256m -Xms256m'
              resources:
                requests:
                  memory: '512Mi'
                  cpu: '500m'
                limits:
                  memory: '1Gi'
                  cpu: '1'
              ports:
                - containerPort: 8081
              readinessProbe:
                httpGet:
                  path: /services/product/management/health
                initialDelaySeconds: 20
                periodSeconds: 15
                failureThreshold: 6
                timeoutSeconds: 5
              livenessProbe:
                httpGet:
                  path: /services/product/management/info
                initialDelaySeconds: 120
                timeoutSeconds: 5
  traffic:
    - tag: latest
      percent: 100
      latestRevision: true
